@startuml
'https://plantuml.com/class-diagram

object main
interface Builder {
    {abstract}MakeTitle()
    {abstract}MakeString()
    {abstract}MakeItems()
    {abstract}Close()
}
class Director {
    builder Builder
    Construct()
}
class TextBuilder {
    buffer
    MakeTitle()
    MakeString()
    MakeItems()
    Close()
    GetResult()
}
class HTMLBuilder {
    filename
    writer
    MakeTitle()
    MakeString()
    MakeItems()
    Close()
    GetResult()
}

main -> Director: Uses >
Director o-> Builder
Builder <|.. TextBuilder
Builder <|.. HTMLBuilder
main -> TextBuilder: Uses >
main -> HTMLBuilder: Uses >


@enduml